--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,8 +8,42 @@
 <body>
     <div id="container">
 
-        <div id="setting-container">
+        <div id="settings-modal" class="modal none">
+            <div class="modal-content">
+                <h2>설정</h2>
+                <div class="settings-group">
+                    <div class="setting-item">
+                        <label>작업 시간 (분)</label>
+                        <input type="number" id="work-time" min="1" max="60">
+                    </div>
+                    <div class="setting-item">
+                        <label>휴식 시간 (분)</label>
+                        <input type="number" id="break-time" min="1" max="30">
+                    </div>
+                    <!-- <div class="setting-item">
+                        <label>
+                            <input type="checkbox" id="sound-enabled">
+                            알림음 사용
+                        </label>
+                    </div>
+                    <div class="setting-item">
+                        <label>알림음 볼륨</label>
+                        <input type="range" id="sound-volume" min="0" max="1" step="0.1" value="0.7">
+                    </div> -->
+                    <div class="setting-item">
+                        <label>완료 목록 보기</label>
+                        <input type="checkbox" id="show-completed">
+                    </div>
+                </div>
+                <div class="modal-buttons">
+                    <button id="save-settings">저장</button>
+                    <button id="close-settings">닫기</button>
+                </div>
+            </div>
+        </div>
 
+        <div class="setting-container">
+            <img id="setting-button" class="setting-button action" src="../assets/images/setting.png"/>
         </div>
 
         <div id="timer-container">
