--- a/renderer/index.html
+++ b/renderer/index.html
@@ -34,6 +34,11 @@
                         <label>완료 목록 보기</label>
                         <input type="checkbox" id="show-completed">
                     </div>
+                    <div class="setting-item">
+                        <label>알람 종류</label>
+                        <select id="alarm-type">
+                        </select>
+                    </div>
                 </div>
                 <div class="modal-buttons">
                     <button id="save-settings">저장</button>
