--- a/renderer/index.html
+++ b/renderer/index.html
@@ -79,7 +79,7 @@
             <div id="current-task" class="list-element-container">
             </div>
         </div>
-        <div id="to-do-list" class="">
+        <div id="to-do-list">
 
             <div id="list-top" class="list">
                 <!-- 여기 안쪽으로 목록 렌더링 -->
