--- a/renderer/index.html
+++ b/renderer/index.html
@@ -39,6 +39,10 @@
                         <input type="checkbox" id="show-completed">
                     </div>
                     <div class="setting-item">
+                        <label>다크모드</label>
+                        <input type="checkbox" id="is-dark-mode">
+                    </div>
+                    <div class="setting-item">
                         <label>알람 종류</label>
                         <select id="alarm-type">
                         </select>
