다크모드 추가

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -60,7 +60,7 @@
                 <div id="today-complete-task-num" class="font-large"></div>
                 <div id="today-complete-task-num-reset" class="action">초기화</div>
             </div>
-            <img id="setting-button" class="setting-button action" src="../assets/images/setting.png"/>
+            <img id="setting-button" class="setting-button action assets" src="../assets/images/setting.png"/>
         </div>
 
         <div id="timer-container">
@@ -69,9 +69,9 @@
                     <div id="timer-text" class="font-xxxxlarge">
                         <span id="minuates"></span>:<span id="seconds"></span>
                     </div>
-                    <button id="reset-btn" class="action font-medium">초기화</button>
+                    <button id="reset-btn" class="action font-medium btn">초기화</button>
                 </div>
-                <button id="start-btn">
+                <button id="start-btn" class="assets">
                   <img id="play-button" class="play-button" src="../assets/images/play-button.svg" />
                   <div id="pause-button" class="pause-button none">
                     <div class="bar"></div>
@@ -94,7 +94,7 @@
 
         <div class="input-container" id="input-container">
             <input class="todo-input" type="text" id="todo-input" placeholder="새 할 일을 입력하세요" />
-            <button class="add-todo-btn" id="add-todo-btn">추가</button>
+            <button class="add-todo-btn btn" id="add-todo-btn">추가</button>
         </div>
 
     </div>
